// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly when providing a URL string 1`] = `
<DocumentFragment>
  <div
    class="relative flex justify-end"
  >
    <img
      alt=""
      src="https://via.placeholder.com/500x500"
    />
    <div
      class="flex flex-col justify-center w-1/2 z-10"
    />
    <div
      class="absolute inset-0 overflow-hidden"
    >
      <svg
        class="overflow-visible absolute transform translate-x-1/4 -translate-y-2/4 lg:-translate-y-3/4
    "
        height="60vw"
        style="color: rgb(255, 255, 255); right: 0px; top: 0px;"
        width="60vw"
      >
        <circle
          class="stroke-current"
          cx="30vw"
          cy="30vw"
          fill-opacity="0"
          opacity="0.1"
          r="30vw"
          stroke-width="20px"
        />
      </svg>
      <svg
        class="overflow-visible absolute transform -translate-x-1/4 translate-y-2/4 lg:translate-y-3/4
    "
        height="68vw"
        style="color: rgb(255, 255, 255); left: 0px; bottom: 0px;"
        width="68vw"
      >
        <circle
          class="stroke-current"
          cx="34vw"
          cy="34vw"
          fill-opacity="0"
          opacity="0.2"
          r="34vw"
          stroke-width="20px"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should render correctly when providing static image data 1`] = `
<DocumentFragment>
  <div
    class="relative flex justify-start"
  >
    <img
      alt=""
      src="[object Object]"
    />
    <div
      class="flex flex-col justify-center w-1/2 z-10"
    />
    <div
      class="absolute inset-0 overflow-hidden"
    >
      <svg
        class="overflow-visible absolute transform translate-x-1/4 -translate-y-2/4 lg:-translate-y-3/4
    "
        height="60vw"
        style="color: rgb(255, 255, 255); right: 0px; top: 0px;"
        width="60vw"
      >
        <circle
          class="stroke-current"
          cx="30vw"
          cy="30vw"
          fill-opacity="0"
          opacity="0.1"
          r="30vw"
          stroke-width="20px"
        />
      </svg>
      <svg
        class="overflow-visible absolute transform -translate-x-1/4 translate-y-2/4 lg:translate-y-3/4
    "
        height="68vw"
        style="color: rgb(255, 255, 255); left: 0px; bottom: 0px;"
        width="68vw"
      >
        <circle
          class="stroke-current"
          cx="34vw"
          cy="34vw"
          fill-opacity="0"
          opacity="0.2"
          r="34vw"
          stroke-width="20px"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;
